--- a/pages/weather-forecast.html
+++ b/pages/weather-forecast.html
@@ -63,7 +63,7 @@
         <h2>Météo pour les 7 prochains jours</h2>
         <div id="week-container" class="weather-forecast">
             <div id="week-container-tab" class="container-tab">
-                <table id="week-forecast-tab">
+                <table id="week-forecast-tab" class="weather-forecast-table">
                     <thead>
                       <tr>
                         <th>Prévision</th> <!-- Première cellule vide ou titre colonne -->
@@ -72,19 +72,13 @@
                     </thead>
                     <tbody>
                       <tr><th>Temps (jour)</th></tr>
-                      <tr><th>Temps (nuit)</th></tr>
+                      <tr><th>Lever / coucher du soleil</th></tr>
                       <tr><th>Températures max / min (°C)</th></tr>
-                      <tr><th>Températures ressenties max / min (°C)</th></tr>
-                      <tr><th>Humidité jour / nuit (%)</th></tr>
-                      <tr><th>Indice UV jour / nuit</th></tr>
+                      <tr><th>Indice UV</th></tr>
                       <tr><th>Vent (jour)</th></tr>
                       <tr><th>Vent (nuit)</th></tr>
                       <tr><th>Rafales jour / nuit (km/h)</th></tr>
-                      <tr><th>Couverture nuageuse jour / nuit (%)</th></tr>
                       <tr><th>Probabilité de pluie jour / nuit (%)</th></tr>
-                      <tr><th>Lever / coucher du soleil</th></tr>
-                      <tr><th>Lever / coucher de la lune</th></tr>
-                      <tr><th>Phase de la lune</th></tr>
                     </tbody>
                   </table>                  
             </div>
