--- a/pages/weather-forecast.html
+++ b/pages/weather-forecast.html
@@ -32,7 +32,7 @@
 
         <h2>Météo pour les prochaines 48h</h2>
         <div id="day-container" class="weather-forecast">
-            <div id="day-container-tab" class="container-tab">
+            <div id="day-container-tab">
                 <table class="weather-forecast-table">
                     <thead>
                         <tr>
@@ -62,7 +62,7 @@
 
         <h2>Météo pour les 7 prochains jours</h2>
         <div id="week-container" class="weather-forecast">
-            <div id="week-container-tab" class="container-tab">
+            <div id="week-container-tab">
                 <table id="week-forecast-tab" class="weather-forecast-table">
                     <thead>
                       <tr>
