--- a/pages/weather-forecast.html
+++ b/pages/weather-forecast.html
@@ -31,7 +31,7 @@
         </div>
 
         <h2>Météo pour les prochaines 48h</h2>
-        <div id="day-container" class="weather-forecast">
+        <div id="day-container">
             <div id="day-container-tab">
                 <table class="weather-forecast-table">
                     <thead>
@@ -61,7 +61,7 @@
         </div>
 
         <h2>Météo pour les 7 prochains jours</h2>
-        <div id="week-container" class="weather-forecast">
+        <div id="week-container">
             <div id="week-container-tab">
                 <table id="week-forecast-tab" class="weather-forecast-table">
                     <thead>
