--- a/pages/weather-forecast.html
+++ b/pages/weather-forecast.html
@@ -78,19 +78,19 @@
                             <th>Lever / coucher du soleil</th>
                         </tr>
                         <tr>
-                            <th>Températures max / min (°C)</th>
+                            <th>Température min (°C)</th>
+                        </tr>
+                        <tr>
+                            <th>Température max (°C)</th>
                         </tr>
                         <tr>
                             <th>Indice UV</th>
                         </tr>
                         <tr>
-                            <th>Vent (jour)</th>
+                            <th>Vent (km/h)</th>
                         </tr>
                         <tr>
-                            <th>Vent (nuit)</th>
-                        </tr>
-                        <tr>
-                            <th>Rafales jour / nuit (km/h)</th>
+                            <th>Rafales (km/h)</th>
                         </tr>
                         <tr>
                             <th>Probabilité de pluie jour / nuit (%)</th>
