--- a/pages/weather-forecast.html
+++ b/pages/weather-forecast.html
@@ -30,6 +30,10 @@
             </div>
         </div>
 
+        <div id="loading-message">
+            Chargement des prévisions météo...
+        </div>
+
         <h2>Météo pour les prochaines 48h</h2>
         <div id="forecast-day">
             <div id="forecast-day-table-container">
