--- a/pages/weather-forecast.html
+++ b/pages/weather-forecast.html
@@ -30,12 +30,12 @@
             </div>
         </div>
 
-        <div id="loading-message">
+        <div id="loading-message" style="display: block;">
             Chargement des prévisions météo...
         </div>
 
-        <h2>Météo pour les prochaines 48h</h2>
-        <div id="forecast-day">
+        <h2 style="display: none;">Météo pour les prochaines 48h</h2>
+        <div id="forecast-day" style="display: none;">
             <div id="forecast-day-table-container">
                 <table class="forecast-table">
                     <thead>
@@ -64,8 +64,8 @@
             </div>
         </div>
 
-        <h2>Météo pour les 7 prochains jours</h2>
-        <div id="forecast-week">
+        <h2 style="display: none;">Météo pour les 7 prochains jours</h2>
+        <div id="forecast-week" style="display: none;">
             <div id="forecast-week-table-container">
                 <table id="forecast-week-table" class="forecast-table">
                     <thead>
