--- a/pages/weather-forecast.html
+++ b/pages/weather-forecast.html
@@ -110,8 +110,8 @@
 
     <script src="/js/loader/header-loader.js" defer></script>
     <script src="/js/loader/menu-loader.js" defer></script>
-    <script src="/js/colors.js" defer></script>
-    <script src="/js/icons.js" defer></script>
+    <script src="/js/utils/colors.js" defer></script>
+    <script src="/js/utils/icons.js" defer></script>
     <script type="importmap">
         {
           "imports": {
@@ -123,7 +123,7 @@
           }
         }
     </script>
-    <script src="/js/call-api.js" defer></script>
+    <script src="/js/utils/call-api.js" defer></script>
     <script type="module" src="/js/weather-forecast.js" defer></script>
     <script src="/js/loader/footer-loader.js" defer></script>
 </body>
