--- a/pages/weather-station.html
+++ b/pages/weather-station.html
@@ -92,8 +92,8 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js" defer></script>
     <script src="/js/loader/header-loader.js" defer></script>
     <script src="/js/loader/menu-loader.js" defer></script>
-    <script src="/js/colors.js" defer></script>
-    <script src="/js/call-api.js" defer></script>
+    <script src="/js/utils/colors.js" defer></script>
+    <script src="/js/utils/call-api.js" defer></script>
     <script src="/js/weather-station.js" defer></script>
     <script src="/js/loader/footer-loader.js" defer></script>
 </body>
