--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <h1>Bienvenue sur le site météo du Croisic</h1>
         <p>Ici, vous trouverez toutes les informations météo locales en temps réel.</p>
         <div id="logo-croisic">
-            <img src="/icons/logos/Le_Croisic_meteo.webp">
+            <img src="/icons/logos/Le_Croisic_meteo.webp" alt="Logo météo Le Croisic">
         </div>
     </main>
 
