--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="/css/header.css">
     <link rel="stylesheet" href="/css/menu.css">
     <link rel="stylesheet" href="/css/footer.css">
+    <meta name="description" content="Météo en temps réel au Croisic : température, vent, marées et plus.">
+    <meta property="og:title" content="Météo Le Croisic">
+    <meta property="og:image" content="/icons/logos/Le_Croisic_meteo.webp">
 </head>
 
 <body>
