suppression hum day

--- a/pages/weather-forecast.html
+++ b/pages/weather-forecast.html
@@ -43,7 +43,7 @@
                             <th>Jour</th>
                             <th>Heure</th>
                             <th>Température<br /><small>(°C)</small></th>
-                            <th>Humidité<br /><small>(%)</small></th>
+                            <!-- <th>Humidité<br /><small>(%)</small></th> -->
                             <th>Pression<br /><small>(hPa)</small></th>
                             <th>Vent moyen<br /><small>(km/h)</small></th>
                             <th>Vent rafales<br /><small>(km/h)</small></th>
