--- a/pages/weather-forecast.html
+++ b/pages/weather-forecast.html
@@ -34,7 +34,7 @@
             Chargement des prévisions météo...
         </div>
 
-        <h2 style="display: none;">Météo pour les prochaines 48h</h2>
+        <h2 style="display: none;">Prévisions des prochaines 48h</h2>
         <div id="forecast-day" style="display: none;">
             <div id="forecast-day-table-container">
                 <table class="forecast-table">
@@ -63,7 +63,7 @@
             </div>
         </div>
 
-        <h2 style="display: none;">Météo pour les 7 prochains jours</h2>
+        <h2 style="display: none;">Prévisions des 7 prochains jours</h2>
         <div id="forecast-week" style="display: none;">
             <div id="forecast-week-table-container">
                 <table id="forecast-week-table" class="forecast-table">
