--- a/pages/weather-forecast.html
+++ b/pages/weather-forecast.html
@@ -81,10 +81,7 @@
                             <th>Lever / coucher du soleil</th>
                         </tr>
                         <tr>
-                            <th>Température min (°C)</th>
-                        </tr>
-                        <tr>
-                            <th>Température max (°C)</th>
+                            <th>Température min / max (°C)</th>
                         </tr>
                         <tr>
                             <th>Vent (km/h)</th>
