--- a/pages/weather-forecast.html
+++ b/pages/weather-forecast.html
@@ -66,7 +66,7 @@
         <h2 style="display: none;">Prévisions des 7 prochains jours</h2>
         <div id="forecast-week" style="display: none;">
             <div id="forecast-week-table-container">
-                <table id="forecast-week-table">
+                <table id="forecast-week-table" class="forecast-table">
                     <thead>
                         <tr>
                         <th>Type</th>
