--- a/pages/weather-forecast.html
+++ b/pages/weather-forecast.html
@@ -73,11 +73,11 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr><td>Temps</td></tr>
-                        <tr><td>Lever / coucher soleil</td></tr>
-                        <tr><td>Températures</td></tr>
-                        <tr><td>Vent moyen</td></tr>
-                        <tr><td>Probabilité pluie jour / nuit</td></tr>
+                        <tr><th>Temps</th></tr>
+                        <tr><th>Lever / coucher soleil</th></tr>
+                        <tr><th>Températures</th></tr>
+                        <tr><th>Vent moyen</th></tr>
+                        <tr><th>Probabilité pluie jour / nuit</th></tr>
                     </tbody>
                     </table>
             </div>
