--- a/pages/weather-forecast.html
+++ b/pages/weather-forecast.html
@@ -76,7 +76,7 @@
                         <tr><th>Temps</th></tr>
                         <tr><th>Lever / coucher soleil</th></tr>
                         <tr><th>Températures</th></tr>
-                        <tr><th>Vent moyen</th></tr>
+                        <tr><th>Vent</th></tr>
                         <tr><th>Probabilité pluie jour / nuit</th></tr>
                     </tbody>
                     </table>
