--- a/pages/weather-forecast.html
+++ b/pages/weather-forecast.html
@@ -47,7 +47,7 @@
                             <th>Vent moyen<br /><small>(km/h)</small></th>
                             <th>Vent rafales<br /><small>(km/h)</small></th>
                             <th>Direction<br />du vent</th>
-                            <th>Pluie<br /><small>(%)</small></th>
+                            <th>Pluie<br /><small>(mm)</small></th>
                             <th>Indice<br />UV</th>
                             <th>Temps</th>
                         </tr>
