--- a/pages/weather-forecast.html
+++ b/pages/weather-forecast.html
@@ -42,12 +42,12 @@
                         <tr>
                             <th>Jour</th>
                             <th>Heure</th>
-                            <th>Température<br /><small>(°C)</small></th>
-                            <th>Pression<br /><small>(hPa)</small></th>
-                            <th>Vent moyen<br /><small>(km/h)</small></th>
-                            <th>Vent rafales<br /><small>(km/h)</small></th>
+                            <th>Température</th>
+                            <th>Pression</th>
+                            <th>Vent<br />moyen</th>
+                            <th>Vent<br />rafales</th>
                             <th>Direction<br />du vent</th>
-                            <th>Pluie<br /><small>(mm)</small></th>
+                            <th>Pluie</th>
                             <th>Indice<br />UV</th>
                             <th>Temps</th>
                         </tr>
@@ -77,7 +77,7 @@
                         <tr><th>Lever / coucher soleil</th></tr>
                         <tr><th>Températures</th></tr>
                         <tr><th>Vent</th></tr>
-                        <tr><th>Probabilité pluie jour / nuit</th></tr>
+                        <tr><th>Pluie</th></tr>
                     </tbody>
                     </table>
             </div>
