--- a/pages/weather-forecast.html
+++ b/pages/weather-forecast.html
@@ -37,7 +37,7 @@
         <h2 style="display: none;">Prévisions des prochaines 48h</h2>
         <div id="forecast-day" style="display: none;">
             <div id="forecast-day-table-container">
-                <table class="forecast-table">
+                <table id="forecast-day-table" class="forecast-table">
                     <thead>
                         <tr>
                             <th>Jour</th>
