--- a/pages/weather-forecast.html
+++ b/pages/weather-forecast.html
@@ -40,16 +40,16 @@
                 <table id="forecast-day-table" class="forecast-table">
                     <thead>
                         <tr>
-                            <th>Jour</th>
-                            <th>Heure</th>
-                            <th>Température</th>
-                            <th>Pression</th>
-                            <th>Vent<br />moyen</th>
-                            <th>Vent<br />rafales</th>
-                            <th>Direction<br />du vent</th>
-                            <th>Pluie</th>
-                            <th>Indice<br />UV</th>
-                            <th>Temps</th>
+                            <th data-mobile="Jour">Jour</th>
+                            <th data-mobile="Heur">Heure</th>
+                            <th data-mobile="Temp">Température</th>
+                            <th data-mobile="Pression">Pression</th>
+                            <th data-mobile="Vent moy">Vent<br />moyen</th>
+                            <th data-mobile="Raf vent">Vent<br />rafales</th>
+                            <th data-mobile="Dir vent">Direction<br />du vent</th>
+                            <th data-mobile="Pluie">Pluie</th>
+                            <th data-mobile="UV">Indice<br />UV</th>
+                            <th data-mobile="Temps">Temps</th>
                         </tr>
                     </thead>
                     <tbody id="day-forecast-body"></tbody>
