--- a/pages/weather-forecast.html
+++ b/pages/weather-forecast.html
@@ -73,11 +73,11 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr><th>Temps</th></tr>
-                        <tr><th>Lever / coucher soleil</th></tr>
-                        <tr><th>Températures</th></tr>
-                        <tr><th>Vent</th></tr>
-                        <tr><th>Pluie</th></tr>
+                        <tr><th data-mobile="Temps">Temps</th></tr>
+                        <tr><th data-mobile="Soleil">Lever / coucher soleil</th></tr>
+                        <tr><th data-mobile="Temp.">Températures</th></tr>
+                        <tr><th data-mobile="Vent">Vent</th></tr>
+                        <tr><th data-mobile="Pluie">Pluie</th></tr>
                     </tbody>
                 </table>
             </div>
