--- a/pages/weather-forecast.html
+++ b/pages/weather-forecast.html
@@ -44,9 +44,9 @@
                             <th data-mobile="Heur">Heure</th>
                             <th data-mobile="Temp">Température</th>
                             <th data-mobile="Pression">Pression</th>
-                            <th data-mobile="Vent moy">Vent<br />moyen</th>
-                            <th data-mobile="Raf vent">Vent<br />rafales</th>
-                            <th data-mobile="Dir vent">Direction<br />du vent</th>
+                            <th data-mobile="Vent<br>moy">Vent<br />moyen</th>
+                            <th data-mobile="Raf<br>vent">Vent<br />rafales</th>
+                            <th data-mobile="Dir<br>vent">Direction<br />du vent</th>
                             <th data-mobile="Pluie">Pluie</th>
                             <th data-mobile="UV">Indice<br />UV</th>
                             <th data-mobile="Temps">Temps</th>
