todo webcam et climat

--- a/pages/menu.html
+++ b/pages/menu.html
@@ -5,7 +5,7 @@
         <li><a href="/pages/weather-forecast.html">Prévisions météo</a></li>
         <li><a href="/pages/tides.html">Infos marées</a></li>
         <li><a href="/pages/weather-station.html">Station météo</a></li>
-        <li><a href="/pages/webcam.html">Webcam</a></li>
-        <li><a href="/pages/climat-croisic.html">Climat Croisic</a></li>
+        <!-- <li><a href="/pages/webcam.html">Webcam</a></li>
+        <li><a href="/pages/climat-croisic.html">Climat Croisic</a></li> -->
     </ul>
 </nav>
