--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/css/header.css">
     <link rel="stylesheet" href="/css/menu.css">
     <link rel="stylesheet" href="/css/footer.css">
+    <link rel="stylesheet" href="/css/index.css" />
     <meta name="description" content="Météo en temps réel au Croisic : température, vent, marées et plus.">
     <meta property="og:title" content="Météo Le Croisic">
     <meta property="og:image" content="/icons/logos/Le_Croisic_meteo.webp">
@@ -20,8 +21,10 @@
     <nav id="menu-container"></nav>
 
     <main>
-        <h1>Bienvenue sur le site météo du Croisic</h1>
-        <p>Ici, vous trouverez toutes les informations météo locales en temps réel.</p>
+        <h1>Bienvenue sur le site météo du Croisic !</h1>
+        <p>Ici, vous trouverez les prévisions météo pour le Croisic :
+            des prévisions horairespour les 48 prochaines heures,
+            et quotidiennes pour les 7 prochains jours.</p>
         <div id="logo-croisic">
             <img src="/icons/logos/Le_Croisic_meteo.webp" alt="Logo météo Le Croisic">
         </div>
