--- a/index.html
+++ b/index.html
@@ -24,9 +24,8 @@
         <h1>Bienvenue sur le site météo du Croisic !</h1>
         <p>Vous trouverez ici les prévisions météo horaires pour les 48 prochaines heures ainsi que les prévisions quotidiennes pour les 7 jours à venir.<br>
             Des données en temps réel provenant d’une station météo sont également disponibles.<br>
-            Vous pouvez aussi consulter les horaires et coefficients des marées.<br>
+            Vous pouvez aussi consulter les horaires et coefficients des marées.<br><br>
             Toutes les informations sont mises à jour régulièrement afin de garantir leur fiabilité.
-
         </p>
         <div id="logo-croisic">
             <img src="/icons/logos/Le_Croisic_meteo.webp" alt="Logo météo Le Croisic">
