--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     <script src="/js/loader/header-loader.js" defer></script>
     <script src="/js/loader/menu-loader.js" defer></script>
-    <script src="/js/footer-loader.js" defer></script>
+    <script src="/js/loader/footer-loader.js" defer></script>
 </body>
 
 </html>
