--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 
     <main>
         <h1>Bienvenue sur le site météo du Croisic !</h1>
-        <p>Vous trouverez ici les prévisions météo horaires pour les 48 prochaines heures ainsi que les prévisions quotidiennes pour les 7 jours à venir.<br>
-            Des données en temps réel provenant d’une station météo sont également disponibles.<br>
-            Vous pouvez aussi consulter les horaires et coefficients des marées.<br><br>
+        <p>Vous trouverez <a href="/pages/weather-forecast.html">ici</a> les prévisions météo horaires pour les 48 prochaines heures ainsi que les prévisions quotidiennes pour les 7 jours à venir.<br><br>
+            Des données en temps réel provenant d’une station météo sont également <a href="/pages/weather-station.html">disponibles</a>.<br><br>
+            Vous pouvez aussi <a href="/pages/tides.html">consulter</a> les horaires et coefficients des marées.<br><br>
             Toutes les informations sont mises à jour régulièrement afin de garantir leur fiabilité.
         </p>
         <div id="logo-croisic">
