--- a/pages/weather-forecast.html
+++ b/pages/weather-forecast.html
@@ -31,7 +31,7 @@
         </div>
 
         <div id="loading-message" style="display: block;">
-            Chargement des prévisions météo...
+            Chargement des prévisions météo en cours...
         </div>
 
         <h2 style="display: none;">Prévisions des prochaines 48h</h2>
@@ -105,17 +105,6 @@
           }
         }
     </script>
-<!--     <script type="importmap">
-        {
-          "imports": {
-            "chart.js": "https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.js",
-            "chartjs-adapter-date-fns": "https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns@3.0.0/dist/chartjs-adapter-date-fns.esm.js",
-            "date-fns": "https://esm.sh/v135/date-fns@3.6.0",
-            "date-fns/locale/fr": "https://esm.sh/v135/date-fns@3.6.0/locale/fr",
-            "@kurkle/color": "https://esm.sh/@kurkle/color@0.3.2"
-          }
-        }
-    </script> -->
     <script src="/js/utils/call-api.js" defer></script>
     <script type="module" src="/js/weather-forecast.js" defer></script>
     <script src="/js/loader/footer-loader.js" defer></script>
