balise meta google

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="-nnIke-Ii_UHchB3RXqEzVMVNZ6CXOdCLz_cFsNQq0A" />
     <title>Accueil - Météo Croisic</title>
     <link rel="stylesheet" href="/css/base.css">
     <link rel="stylesheet" href="/css/header.css">
