--- a/pages/weather-forecast.html
+++ b/pages/weather-forecast.html
@@ -98,12 +98,13 @@
     <script src="/js/utils/colors.js" defer></script>
     <script src="/js/utils/icons.js" defer></script>
     <script type="importmap">
-        {
-          "imports": {
+    {
+        "imports": {
             "chart.js": "https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.js",
+            "@kurkle/color": "https://cdn.jsdelivr.net/npm/@kurkle/color@0.3.2/dist/color.mjs",
             "chartjs-adapter-date-fns": "https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns@3.0.0/dist/chartjs-adapter-date-fns.esm.js"
-          }
         }
+    }
     </script>
     <script src="/js/utils/call-api.js" defer></script>
     <script type="module" src="/js/weather-forecast.js" defer></script>
