--- a/pages/weather-forecast.html
+++ b/pages/weather-forecast.html
@@ -99,11 +99,10 @@
     <script src="/js/utils/icons.js" defer></script>
     <script type="importmap">
     {
-        "imports": {
-            "chart.js": "https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.js",
-            "@kurkle/color": "https://cdn.jsdelivr.net/npm/@kurkle/color@0.3.2/dist/color.mjs",
-            "chartjs-adapter-date-fns": "https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns@3.0.0/dist/chartjs-adapter-date-fns.esm.js"
-        }
+    "imports": {
+        "chart.js": "https://esm.sh/chart.js@4.4.1",
+        "chartjs-adapter-date-fns": "https://esm.sh/chartjs-adapter-date-fns@3.0.0"
+    }
     }
     </script>
     <script src="/js/utils/call-api.js" defer></script>
