--- a/pages/weather-forecast.html
+++ b/pages/weather-forecast.html
@@ -101,7 +101,7 @@
     <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns@3.0.0/dist/chartjs-adapter-date-fns.umd.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/date-fns@3.6.0/dist/date-fns.min.js"></script>
     <script src="/js/utils/call-api.js" defer></script>
-    <script type="module" src="/js/weather-forecast.js" defer></script>
+    <script src="/js/weather-forecast.js" defer></script>
     <script src="/js/loader/footer-loader.js" defer></script>
 </body>
 
