--- a/pages/weather-forecast.html
+++ b/pages/weather-forecast.html
@@ -98,7 +98,7 @@
     <script src="/js/utils/colors.js" defer></script>
     <script src="/js/utils/icons.js" defer></script>
 
-    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns@3.0.0/dist/chartjs-adapter-date-fns.umd.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/date-fns@3.6.0/dist/date-fns.min.js"></script>
 
