--- a/pages/weather-forecast.html
+++ b/pages/weather-forecast.html
@@ -97,13 +97,8 @@
     <script src="/js/loader/menu-loader.js" defer></script>
     <script src="/js/utils/colors.js" defer></script>
     <script src="/js/utils/icons.js" defer></script>
-
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/date-fns@2.30.0/dist/date-fns.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns"></script>
-
     <script src="/js/utils/call-api.js" defer></script>
-    <script type="module" src="/js/weather-forecast.js" defer></script>
+    <script type="module" src="/js/weather-forecast.js"></script>
     <script src="/js/loader/footer-loader.js" defer></script>
 
 </body>
