--- a/pages/weather-forecast.html
+++ b/pages/weather-forecast.html
@@ -12,6 +12,11 @@
     <link rel="stylesheet" href="/css/menu.css" />
     <link rel="stylesheet" href="/css/footer.css" />
     <link rel="stylesheet" href="/css/weather-forecast.css" />
+
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.3/dist/chart.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns@2.0.0/dist/chartjs-adapter-date-fns.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/date-fns@2.30.0/locale/fr/index.js"></script>
+</head>
 </head>
 
 <body>
@@ -98,7 +103,7 @@
     <script src="/js/utils/colors.js" defer></script>
     <script src="/js/utils/icons.js" defer></script>
     <script src="/js/utils/call-api.js" defer></script>
-    <script type="module" src="/js/weather-forecast.js"></script>
+    <script src="/js/weather-forecast.js"></script>
     <script src="/js/loader/footer-loader.js" defer></script>
 
 </body>
