--- a/pages/weather-forecast.html
+++ b/pages/weather-forecast.html
@@ -97,10 +97,19 @@
     <script src="/js/loader/menu-loader.js" defer></script>
     <script src="/js/utils/colors.js" defer></script>
     <script src="/js/utils/icons.js" defer></script>
+    <script type="importmap">
+        {
+          "imports": {
+            "chart.js": "https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.js",
+            "chartjs-adapter-date-fns": "https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns@3.0.0/dist/chartjs-adapter-date-fns.esm.js",
+            "date-fns": "https://esm.sh/v135/date-fns@3.6.0",
+            "date-fns/locale/fr": "https://esm.sh/v135/date-fns@3.6.0/locale/fr",
+            "@kurkle/color": "https://esm.sh/@kurkle/color@0.3.2"
+          }
+        }
+    </script>
     <script src="/js/utils/call-api.js" defer></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.3/dist/chart.umd.min.js" defer></script>
-    <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns@2.0.0/dist/chartjs-adapter-date-fns.umd.min.js" defer></script>
-    <script src="/js/weather-forecast.js"></script>
+    <script type="module" src="/js/weather-forecast.js" defer></script>
     <script src="/js/loader/footer-loader.js" defer></script>
 
 </body>
