--- a/index.html
+++ b/index.html
@@ -23,10 +23,12 @@
 
     <main>
         <h1>Bienvenue sur le site météo du Croisic !</h1>
-        <p>Vous trouverez <a href="/pages/weather-forecast.html">ici</a> les prévisions météo horaires pour les 48 prochaines heures ainsi que les prévisions quotidiennes pour les 7 jours à venir.<br><br>
-            Des données en temps réel provenant d’une station météo sont également <a href="/pages/weather-station.html">disponibles</a>.<br><br>
-            Vous pouvez aussi <a href="/pages/tides.html">consulter</a> les horaires et coefficients des marées.<br><br>
-        </p>
+        <p>Consultez facilement les prévisions météo, suivez les données en temps réel et obtenez les informations essentielles sur les marées. Préparez vos sorties en mer en toute sécurité !</p>
+        <div class="buttons">
+            <a class="btn" href="/pages/weather-forecast.html">Voir les prévisions</a>
+            <a class="btn" href="/pages/weather-station.html">Données en temps réel</a>
+            <a class="btn" href="/pages/tides.html">Infos marées</a>
+        </div>
         <div id="logo-croisic">
             <img src="/icons/logos/Le_Croisic_meteo.webp" alt="Logo météo Le Croisic">
         </div>
