--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         <h1>Bienvenue sur le site météo du Croisic !</h1>
         <p>Consultez facilement les prévisions météo, suivez les données en temps réel et obtenez les informations essentielles sur les marées. Préparez vos sorties en mer en toute sécurité !</p>
         <div class="buttons">
-            <a class="btn" href="/pages/weather-forecast.html">Voir les prévisions</a>
-            <a class="btn" href="/pages/weather-station.html">Données en temps réel</a>
+            <a class="btn" href="/pages/weather-forecast.html">Prévisions</a>
+            <a class="btn" href="/pages/weather-station.html">Station météo</a>
             <a class="btn" href="/pages/tides.html">Infos marées</a>
         </div>
         <div id="logo-croisic">
