--- a/pages/weather-station.html
+++ b/pages/weather-station.html
@@ -94,6 +94,17 @@
     <script src="/js/loader/menu-loader.js" defer></script>
     <script src="/js/utils/colors.js" defer></script>
     <script src="/js/utils/call-api.js" defer></script>
+        <script type="importmap">
+        {
+          "imports": {
+            "chart.js": "https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.js",
+            "chartjs-adapter-date-fns": "https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns@3.0.0/dist/chartjs-adapter-date-fns.esm.js",
+            "date-fns": "https://esm.sh/v135/date-fns@3.6.0",
+            "date-fns/locale/fr": "https://esm.sh/v135/date-fns@3.6.0/locale/fr",
+            "@kurkle/color": "https://esm.sh/@kurkle/color@0.3.2"
+          }
+        }
+    </script>
     <script src="/js/weather-station.js" defer></script>
     <script src="/js/loader/footer-loader.js" defer></script>
 </body>
