--- a/pages/weather-forecast.html
+++ b/pages/weather-forecast.html
@@ -109,7 +109,7 @@
         }
     </script>
     <script src="/js/utils/call-api.js" defer></script>
-    <script type="module" src="/js/weather-forecast.js" defer></script>
+    <script type="module" src="/js/pages/weather-forecast.js" defer></script>
     <script src="/js/loader/footer-loader.js" defer></script>
 
 </body>
