--- a/pages/weather-station.html
+++ b/pages/weather-station.html
@@ -105,7 +105,7 @@
           }
         }
     </script>
-    <script type="module" src="/js/weather-station.js" defer></script>
+    <script type="module" src="/js/pages/weather-station.js" defer></script>
     <script src="/js/loader/footer-loader.js" defer></script>
 </body>
 </html>
