--- a/pages/tides.html
+++ b/pages/tides.html
@@ -31,7 +31,7 @@
     <script src="/js/loader/header-loader.js" defer></script>
     <script src="/js/loader/menu-loader.js" defer></script>
     <script src="/js/utils/call-api.js" defer></script>
-    <script src="/js/tides.js" defer></script>
+    <script src="/js/pages/tides.js" defer></script>
     <script src="/js/loader/footer-loader.js" defer></script>
 </body>
 
