--- a/pages/legal-notices.html
+++ b/pages/legal-notices.html
@@ -18,7 +18,7 @@
         <h2>Mentions Légales</h2>
         
         <h3>1. Présentation du site</h3>
-        <p>Le site <strong>Météo au Croisic</strong> est accessible à l'adresse suivante : <a href="https://meteo-croisic.fr">https://meteo-croisic.fr</a></p>
+        <p>Le site <strong>Météo Croisic</strong> est accessible à l'adresse suivante : <a href="https://meteo-croisic.fr">https://meteo-croisic.fr</a></p>
         
         <h3>2. Éditeur du site</h3>
         <p>Le site est édité par : <strong>Quentin Dusserre</strong>.</p>
