--- a/pages/legal-notices.html
+++ b/pages/legal-notices.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/css/base.css">
     <link rel="stylesheet" href="/css/header.css">
     <link rel="stylesheet" href="/css/menu.css">
+    <link rel="stylesheet" href="/css/legal-notices.css">
     <link rel="stylesheet" href="/css/footer.css">
 </head>
 <body>
@@ -21,7 +22,7 @@
         <p>Le site <strong>Météo Croisic</strong> est accessible à l'adresse suivante : <a href="https://meteo-croisic.fr">https://meteo-croisic.fr</a></p>
         
         <h3>2. Éditeur du site</h3>
-        <p>Le site est édité par : <strong>Quentin Dusserre</strong>.</p>
+        <p>Le site est édité par : <strong>Quentin Dusserre</strong></p>
         
         <h3>3. Hébergement</h3>
         <p>Le site est hébergé par : <a href="https://pages.github.com/">Github Pages</a></p>
